--- a/src/main/res/layout/bookmark_activity.xml
+++ b/src/main/res/layout/bookmark_activity.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -58,12 +59,13 @@
             android:gravity="center"/>
     </LinearLayout>
 
-    <ListView
+    <de.domjos.schooltools.custom.SwipeRefreshDeleteList
         android:id="@+id/lvBookmarks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/llSubjects"
         android:layout_above="@+id/svControls"
+        custom:itemIcon="@drawable/ic_bookmark_black_24dp"
         android:padding="1dp"/>
 
     <WebView
