--- a/src/main/res/layout/learning_card_group_activity.xml
+++ b/src/main/res/layout/learning_card_group_activity.xml
@@ -8,18 +8,19 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".activities.LearningCardGroupActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activities.LearningCardGroupActivity">
 
-    <ListView
+    <de.domjos.schooltools.custom.SwipeRefreshDeleteList
         android:id="@+id/lvLearningCardGroups"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:itemIcon="@drawable/ic_group_work_black_24dp"
         android:padding="8dp"
         android:dividerHeight="4dp"/>
 
