--- a/src/main/res/layout/learning_card_query_activity.xml
+++ b/src/main/res/layout/learning_card_query_activity.xml
@@ -21,12 +21,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <de.domjos.schooltools.custom.SwipeRefreshDeleteList
             android:id="@+id/lvLearningCardQueries"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:dividerHeight="4dp"/>
+            android:dividerHeight="4dp"
+            app:itemIcon="@drawable/ic_question_answer_black_24dp"/>
 
         <ScrollView
             android:id="@+id/scrollView"
