--- a/src/main/res/layout/list_item.xml
+++ b/src/main/res/layout/list_item.xml
@@ -19,10 +19,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_controls"
+    android:background="@drawable/item_background"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:padding="2dp">
+    android:padding="2dp"
+    android:layout_margin="2dp">
 
     <ImageView
         android:id="@+id/ivIcon"
